cmake_minimum_required(VERSION 3.15)
project(C__PrimePlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__PrimePlus main.cpp )
add_executable(sqrt 1_sqrt.cpp)
add_executable(2_hexoct 2_hexoct.cpp )
add_executable(3_cin_getline 3_cin_getline.cpp)
add_executable(4_cstring 4_cstring.cpp)
add_executable(5_struct 5_struct.cpp)
add_executable(6_union 6_union.cpp)
add_executable(7_enum 7_enum.cpp)
add_executable(8_pointer 8_pointer.cpp)
add_executable(9_all_combine 9_all_combine.cpp)
add_executable(10_vector_array 10_vector_array.cpp)





