cmake_minimum_required(VERSION 3.15)
project(5_circle)

set(CMAKE_CXX_STANDARD 14)

add_executable(5_circle main.cpp )
add_executable(1_express 1_express.cpp )
add_executable(2_clock 2_clock.cpp)
add_executable(3_range_circle 3_range_circle.cpp)
add_executable(4_input 4_input.cpp)
add_executable(6_cctypes 6_cctypes.cpp)
add_executable(7_fileIO 7_fileIO.cpp)



