cmake_minimum_required(VERSION 3.15)
project(7_funcation)

set(CMAKE_CXX_STANDARD 14)

add_executable(7_funcation main.cpp )
add_executable(1_funcation_array 1_funcation_array.cpp )
add_executable(2_recur 2_recur.cpp)
add_executable(3_inline_funcation 3_inline_funcation.cpp)
add_executable(4_1_alias_variable 4_1_alias_variable.cpp)
add_executable(4_2_alias_struct 4_2_alias_struct.cpp )
add_executable(5_default_parameter 5_default_parameter.cpp)
add_executable(6_template_funcation 6_template_funcation.cpp)
add_executable(6_1_template 6_1_template.cpp)
add_executable(7_namespace 7_namespace.cpp)

